# EmbSysProject-UIT-CE224.Q11

./: README.md  sdkconfig
components/encoder/: CMakeLists.txt  encoder.c
components/encoder/include/: encoder.h
components/i2c_lcd/: CMakeLists.txt  i2c_lcd.c
components/i2c_lcd/include/: i2c_lcd.h
components/ir_sensor/: ir_sensor.c
components/motor_l298n/: CMakeLists.txt  motor_l298n.c
components/motor_l298n/include/: motor_l298n.h
components/motor_speed_control/: CMakeLists.txt  motor_speed_control.c
components/motor_speed_control/include/: motor_speed_control.h
components/net_mqtt/: CMakeLists.txt  net_mqtt.c
components/net_mqtt/include/: net_mqtt.h
components/pca9685/: CMakeLists.txt  pca9685.c
components/pca9685/include/: pca9685.h
components/pid_speed/: CMakeLists.txt  pid_speed.c
components/pid_speed/include/: pid_speed.h
components/tcs34725/: tcs34725.c
components/tcs34725/include/: tcs34725.h
main/: CMakeLists.txt  idf_component.yml  main.c
